[tool.poetry]
name = "bot"
version = "0.1.0"
description = "SpotTheSpy Telegram Bot"
authors = ["Plummy"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.22.0"
redis = "^6.4.0"
babel = "^2.17.0"
pydantic-settings = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
