[project]
name = "bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Plummy",email = "plummybeatsoff@gmail.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.13,<3.15"
dependencies = [
    "aiogram (>=3.24.0,<4.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "alembic (>=1.18.0,<2.0.0)",
    "psycopg (>=3.3.2,<4.0.0)",
    "psycopg-binary (>=3.3.2,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "aiobotocore (>=3.1.0,<4.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "segno (>=1.6.6,<2.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "babel (>=2.17.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
